--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         </activity>
         <activity android:name=".HomeActivity" android:exported="true"/>
         <activity android:name=".LoginActivity"/>
+        <activity android:name=".RegistroActivity" />
+        <activity android:name=".RecuperacionActivity" />
+
     </application>
 
 </manifest>
