CORECCCION DE ERRORES Y MANEJO DE VISUALIZACION DE PERFIL DEL USUARIO

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".LoginActivity"/>
         <activity android:name=".RegistroActivity" />
         <activity android:name=".RecuperacionActivity" />
-
+        <activity android:name=".PerfilActivity" />
     </application>
 
 </manifest>
